--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <a href="#section-contact" class="hero-btn">Get Started</a>
             </div>
             <video autoplay muted loop playsinline preload="metadata" class="hero-video" data-aos="fade-up" poster="assets/images/hero-poster.jpg">
-                <source src="assets/Videos/hssbsdb.mp4" type="video/mp4">
+                <source src="assets/videos/hssbsdb.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
