--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="container">
             <div class="why-choose-content" data-aos="fade-up">
                 <video autoplay muted loop playsinline preload="metadata" class="why-choose-video" poster="assets/images/why-choose-poster.jpg">
-                    <source src="assets/Videos/Blue Orange and White Illustrative Marketing Video (2).mp4" type="video/mp4">
+                    <source src="assets/videos/Blue Orange and White Illustrative Marketing Video (2).mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <div class="why-choose-text" data-aos="zoom-in">
