--- a/index.html
+++ b/index.html
@@ -268,16 +268,8 @@
         <nav class="navbar footer-nav">
             <div class="container">
                 <div class="logo">
-                    <img src="assets/images/J2W_LOGO-removebg-preview.png" alt="J2W Logo" class="footer-logo" loading="lazy">
+                    <img src="assets/images/J2W LOGO.jpg" alt="J2W Logo" class="footer-logo" loading="lazy">
                 </div>
-                <ul class="nav-links">
-                    <li><a href="#page-top">Home</a></li>
-                    <li><a href="#section-about">About</a></li>
-                    <li><a href="#section-services">Services</a></li>
-                    <li><a href="#section-testimonials">Testimonials</a></li>
-                    <li><a href="#section-customers">Customers</a></li>
-                    <li><a href="#section-contact">Contact</a></li>
-                </ul>
             </div>
         </nav>
     </footer>
