--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
                     </ul>
                 </li>
                 <li class="dropdown">
-                    <a href="#section-customers" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">
+                    <a href="#section-clients" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">
                         Customers <i class="fas fa-chevron-down"></i>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="#section-customers">Our Clients</a></li>
+                        <li><a href="#section-clients">Our Clients</a></li>
                         <li><a href="#section-testimonials">Testimonials</a></li>
                     </ul>
                 </li>
@@ -174,8 +174,8 @@
         </div>
     </section>
 
-    <!-- Customers Section -->
-    <section id="section-customers" class="customers">
+    <!-- Clients Section -->
+    <section id="section-clients" class="clients">
         <div class="container">
             <div class="section-header" data-aos="fade-up">
                 <h2>Customers</h2>
