--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </li>
                 <li class="dropdown">
                     <a href="#section-clients" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">
-                        Customers <i class="fas fa-chevron-down"></i>
+                        Clients <i class="fas fa-chevron-down"></i>
                     </a>
                     <ul class="dropdown-menu">
                         <li><a href="#section-clients">Our Clients</a></li>
@@ -178,7 +178,7 @@
     <section id="section-clients" class="clients">
         <div class="container">
             <div class="section-header" data-aos="fade-up">
-                <h2>Customers</h2>
+                <h2>Clients</h2>
                 <hr class="small">
             </div>
             <div class="swiper-container" data-aos="fade-up">
