--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <a href="#section-contact" class="hero-btn">Get Started</a>
             </div>
             <video autoplay muted loop playsinline preload="metadata" class="hero-video" data-aos="fade-up" poster="assets/images/hero-poster.jpg">
-                <source src="assets/videos/hssbsdb.mp4" type="video/mp4">
+                <source src="assets/Videos/hssbsdb.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
@@ -85,7 +85,7 @@
         <div class="container">
             <div class="why-choose-content" data-aos="fade-up">
                 <video autoplay muted loop playsinline preload="metadata" class="why-choose-video" poster="assets/images/why-choose-poster.jpg">
-                    <source src="assets/videos/Blue Orange and White Illustrative Marketing Video (2).mp4" type="video/mp4">
+                    <source src="assets/Videos/Blue Orange and White Illustrative Marketing Video (2).mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <div class="why-choose-text" data-aos="zoom-in">
@@ -111,7 +111,7 @@
                     <div class="swiper-slide">
                         <div class="service-card">
                             <a href="social-media-digital-marketing.html">
-                                <div class="service-image" style="background-image: url('assets/images/rami-al-zayat-w33-zg-dNL4-unsplash.jpg');"></div>
+                                <div class="service-image" style="background-image: url('assets/images/igor-omilaev-TyBsbtbjtEc-unsplash.jpg');"></div>
                                 <h3>Social Media & Digital Marketing</h3>
                             </a>
                         </div>
@@ -145,31 +145,40 @@
                 <h2>Testimonials</h2>
                 <hr class="small">
             </div>
-            <div class="testimonials-grid" data-aos="fade-up">
-                <div class="testimonial-card">
-                    <blockquote>
-                        <p>J2W’s marketing strategies transformed our business. Highly recommend!</p>
-                        <div class="testimonial-img" style="background-image: url('assets/images/HENTIES.jpeg');"></div>
-                        <h4>Henties</h4>
-                        <div class="rating-area">★★★★★</div>
-                    </blockquote>
+            <div class="testimonials-swiper swiper-container" data-aos="fade-up">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="testimonial-card">
+                            <blockquote>
+                                <p>J2W’s marketing strategies transformed our business. Highly recommend!</p>
+                                <div class="testimonial-img" style="background-image: url('assets/images/HENTIES.jpeg');"></div>
+                                <h4>Henties</h4>
+                                <div class="rating-area">★★★★★</div>
+                            </blockquote>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="testimonial-card">
+                            <blockquote>
+                                <p>Our brand now stands out thanks to J2W’s unique approach.</p>
+                                <div class="testimonial-img" style="background-image: url('assets/images/WOS.jpg');"></div>
+                                <h4>White Operating Solutions</h4>
+                                <div class="rating-area">★★★★★</div>
+                            </blockquote>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="testimonial-card">
+                            <blockquote>
+                                <p>J2W’s lead generation doubled our conversions. Game-changer!</p>
+                                <div class="testimonial-img" style="background-image: url('assets/images/SA DAIRY.jpg');"></div>
+                                <h4>SA Dairy Factory Shop</h4>
+                                <div class="rating-area">★★★★★</div>
+                            </blockquote>
+                        </div>
+                    </div>
                 </div>
-                <div class="testimonial-card">
-                    <blockquote>
-                        <p>Our brand now stands out thanks to J2W’s unique approach.</p>
-                        <div class="testimonial-img" style="background-image: url('assets/images/WOS.jpg');"></div>
-                        <h4>White Operating Solutions</h4>
-                        <div class="rating-area">★★★★★</div>
-                    </blockquote>
-                </div>
-                <div class="testimonial-card">
-                    <blockquote>
-                        <p>J2W’s lead generation doubled our conversions. Game-changer!</p>
-                        <div class="testimonial-img" style="background-image: url('assets/images/SA DAIRY.jpg');"></div>
-                        <h4>SA Dairy Factory Shop</h4>
-                        <div class="rating-area">★★★★★</div>
-                    </blockquote>
-                </div>
+                <div class="swiper-pagination"></div>
             </div>
         </div>
     </section>
@@ -265,13 +274,6 @@
                 </div>
             </div>
         </div>
-        <nav class="navbar footer-nav">
-            <div class="container">
-                <div class="logo">
-                    <img src="assets/images/J2W LOGO.jpg" alt="J2W Logo" class="footer-logo" loading="lazy">
-                </div>
-            </div>
-        </nav>
     </footer>
 
     <!-- Go to Top Button -->
