--- a/social-media-digital-marketing.html
+++ b/social-media-digital-marketing.html
@@ -8,6 +8,8 @@
     <title>Social Media & Digital Marketing - J2W</title>
     <link href="https://fonts.googleapis.com/css2?family=Caladea:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,13 +17,39 @@
     <nav class="navbar">
         <div class="container">
             <div class="logo">J2W</div>
+            <button class="nav-toggle" aria-label="Toggle menu" aria-expanded="false">
+                <i class="fas fa-bars"></i>
+            </button>
             <ul class="nav-links">
-                <li><a href="index.html#page-top">Home</a></li>
-                <li><a href="index.html#section-about">About</a></li>
-                <li><a href="index.html#section-services">Services</a></li>
-                <li><a href="index.html#section-testimonials">Testimonials</a></li>
-                <li><a href="index.html#section-customers">Customers</a></li>
-                <li><a href="index.html#section-contact">Contact</a></li>
+                <li class="dropdown">
+                    <a href="index.html#page-top" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">
+                        Home <i class="fas fa-chevron-down"></i>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="index.html#page-top">Top</a></li>
+                        <li><a href="index.html#section-about">About</a></li>
+                        <li><a href="index.html#section-contact">Contact</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="index.html#section-services" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">
+                        Services <i class="fas fa-chevron-down"></i>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="social-media-digital-marketing.html">Social Media & Digital Marketing</a></li>
+                        <li><a href="web-branding-development.html">Web & Branding Development</a></li>
+                        <li><a href="clothes-banners-marketing.html">Clothes, Banners & Marketing Material</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="index.html#section-clients" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">
+                        Clients <i class="fas fa-chevron-down"></i>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="index.html#section-clients">Our Clients</a></li>
+                        <li><a href="index.html#section-testimonials">Testimonials</a></li>
+                    </ul>
+                </li>
             </ul>
         </div>
     </nav>
@@ -32,6 +60,7 @@
             <div class="service-hero-content" data-aos="fade-up">
                 <h1>Social Media & Digital Marketing</h1>
                 <p>Boost your online presence with our expert social media and digital marketing strategies.</p>
+                <a href="index.html#section-services" class="back-btn">Back to Services</a>
             </div>
         </div>
     </section>
@@ -42,11 +71,12 @@
             <div class="service-description-content" data-aos="fade-up">
                 <div class="service-text">
                     <h2>Transform Your Online Presence</h2>
-                    <p>At J2W, we specialize in crafting tailored social media and digital marketing strategies that amplify your brand’s reach and engagement. Our team leverages the latest trends and tools to create impactful campaigns across platforms like Instagram, Facebook, LinkedIn, and more. Whether you’re looking to increase followers, drive traffic, or boost conversions, we’ve got you covered with data-driven solutions.</p>
+                    <hr class="small">
+                    <p>At J2W, we craft tailored social media and digital marketing strategies to amplify your brand’s reach and engagement. Our team leverages cutting-edge tools and trends to create impactful campaigns across platforms like Instagram, Facebook, LinkedIn, and TikTok. From increasing followers to driving conversions, our data-driven solutions deliver measurable results.</p>
                     <a href="index.html#section-contact" class="btn request-quote">Request a Quote</a>
                 </div>
                 <div class="service-image">
-                    <img src="assets/images/social-media-digital-marketing.jpg" alt="Social Media & Digital Marketing">
+                    <img src="https://images.unsplash.com/photo-1611162616305-c69b3fa7fbe0" alt="Social Media & Digital Marketing" loading="lazy">
                 </div>
             </div>
         </div>
@@ -56,24 +86,34 @@
     <section class="service-portfolio">
         <div class="container">
             <div class="section-header" data-aos="fade-up">
-                <h2>Browse Through Our Portfolio of Stunning Campaigns</h2>
+                <h2>Our Stunning Campaigns</h2>
+                <hr class="small">
             </div>
-            <div class="portfolio-grid" data-aos="fade-up">
-                <div class="portfolio-item">
-                    <img src="assets/images/portfolio-social-media-1.jpg" alt="Social Media Campaign 1">
-                    <h3>Campaign for Retail Brand</h3>
-                    <p>A successful Instagram campaign that increased engagement by 150%.</p>
+            <div class="portfolio-swiper swiper-container" data-aos="fade-up">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="portfolio-item">
+                            <img src="https://images.unsplash.com/photo-1611162617213-7d7a39e9b1d7" alt="Social Media Campaign 1" loading="lazy">
+                            <h3>Retail Brand Campaign</h3>
+                            <p>A vibrant Instagram campaign that boosted engagement by 150%.</p>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="portfolio-item">
+                            <img src="https://images.unsplash.com/photo-1557804506-669a67965ba0" alt="Social Media Campaign 2" loading="lazy">
+                            <h3>LinkedIn B2B Strategy</h3>
+                            <p>Generated 200+ leads for a B2B client via targeted LinkedIn ads.</p>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="portfolio-item">
+                            <img src="https://images.unsplash.com/photo-1516321310768-61f3f03a6667" alt="Social Media Campaign 3" loading="lazy">
+                            <h3>Festive Ad Campaign</h3>
+                            <p>Increased e-commerce sales by 300% with a Facebook ad campaign.</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="portfolio-item">
-                    <img src="assets/images/portfolio-social-media-2.jpg" alt="Social Media Campaign 2">
-                    <h3>LinkedIn B2B Strategy</h3>
-                    <p>Generated 200+ leads for a B2B client through targeted LinkedIn ads.</p>
-                </div>
-                <div class="portfolio-item">
-                    <img src="assets/images/portfolio-social-media-3.jpg" alt="Social Media Campaign 3">
-                    <h3>Facebook Ad Campaign</h3>
-                    <p>Boosted e-commerce sales by 300% with a festive season ad campaign.</p>
-                </div>
+                <div class="swiper-pagination"></div>
             </div>
         </div>
     </section>
@@ -82,20 +122,24 @@
     <section class="specialized-services">
         <div class="container">
             <div class="section-header" data-aos="fade-up">
-                <h2>Specialized Services for Social Media & Digital Marketing</h2>
+                <h2>Specialized Services</h2>
+                <hr class="small">
             </div>
             <div class="specialized-services-content" data-aos="fade-up">
                 <div class="specialized-service">
+                    <i class="fas fa-pen-fancy"></i>
                     <h3>Content Creation</h3>
-                    <p>We create engaging content tailored to your audience, from eye-catching graphics to compelling copy.</p>
+                    <p>Engaging content tailored to your audience, from graphics to compelling copy.</p>
                 </div>
                 <div class="specialized-service">
+                    <i class="fas fa-ad"></i>
                     <h3>Ad Management</h3>
-                    <p>Our team manages your ad campaigns to maximize ROI, targeting the right audience at the right time.</p>
+                    <p>Maximize ROI with targeted ad campaigns across multiple platforms.</p>
                 </div>
                 <div class="specialized-service">
+                    <i class="fas fa-chart-line"></i>
                     <h3>Analytics & Reporting</h3>
-                    <p>Detailed insights and reports to track your campaign performance and optimize for better results.</p>
+                    <p>Detailed insights to track performance and optimize results.</p>
                 </div>
             </div>
         </div>
@@ -106,19 +150,20 @@
         <div class="container">
             <div class="section-header" data-aos="fade-up">
                 <h2>Frequently Asked Questions</h2>
+                <hr class="small">
             </div>
             <div class="faq-content" data-aos="fade-up">
                 <div class="faq-item">
-                    <h3>How long does it take to see results from a digital marketing campaign?</h3>
-                    <p>Results can vary, but typically you’ll see initial engagement within 2-4 weeks, with significant growth in 3-6 months.</p>
+                    <h3>How long does it take to see results from a digital marketing campaign? <i class="fas fa-chevron-down"></i></h3>
+                    <p>Results vary, but initial engagement typically appears within 2-4 weeks, with significant growth in 3-6 months.</p>
                 </div>
                 <div class="faq-item">
-                    <h3>What platforms do you focus on for social media marketing?</h3>
-                    <p>We tailor our strategies to your audience, focusing on platforms like Instagram, Facebook, LinkedIn, Twitter, and TikTok.</p>
+                    <h3>What platforms do you focus on for social media marketing? <i class="fas fa-chevron-down"></i></h3>
+                    <p>We tailor strategies to your audience, focusing on Instagram, Facebook, LinkedIn, Twitter, and TikTok.</p>
                 </div>
                 <div class="faq-item">
-                    <h3>Do you provide content creation services?</h3>
-                    <p>Yes, we offer full content creation services, including graphics, videos, and copywriting, to ensure your brand stands out.</p>
+                    <h3>Do you provide content creation services? <i class="fas fa-chevron-down"></i></h3>
+                    <p>Yes, we offer full content creation, including graphics, videos, and copywriting.</p>
                 </div>
             </div>
         </div>
@@ -134,32 +179,22 @@
                 </div>
                 <div class="footer-side2">
                     <ul class="social-details">
-                        <li><a href="https://www.facebook.com/profile.php?id=61561740595029" target="_blank"><i class="icon facebook"></i></a></li>
+                        <li><a href="https://www.facebook.com/profile.php?id=61561740595029" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
                     </ul>
                 </div>
             </div>
         </div>
-        <nav class="navbar footer-nav">
-            <div class="container">
-                <div class="logo">
-                    <img src="assets/images/J2W_LOGO-removebg-preview.png" alt="J2W Logo" class="footer-logo">
-                </div>
-                <ul class="nav-links">
-                    <li><a href="index.html#page-top">Home</a></li>
-                    <li><a href="index.html#section-about">About</a></li>
-                    <li><a href="index.html#section-services">Services</a></li>
-                    <li><a href="index.html#section-testimonials">Testimonials</a></li>
-                    <li><a href="index.html#section-customers">Customers</a></li>
-                    <li><a href="index.html#section-contact">Contact</a></li>
-                </ul>
-            </div>
-        </nav>
     </footer>
 
     <!-- Go to Top Button -->
-    <a id="gotoTop" class="gotoTop" href="#page-top"><i class="icon angle-up"></i></a>
+    <a id="gotoTop" class="gotoTop" href="#page-top"><i class="fas fa-angle-up"></i></a>
 
+    <!-- Sticky Quote Button (Mobile) -->
+    <a href="index.html#section-contact" class="sticky-quote-btn"><i class="fas fa-quote-right"></i> Get a Quote</a>
+
+    <!-- Scripts -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
