--- a/social-media-digital-marketing.html
+++ b/social-media-digital-marketing.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="J2W delivers cutting-edge Social Media & Digital Marketing services to skyrocket your brand’s online presence.">
-    <meta name="keywords" content="Social Media, Digital Marketing, J2W, Branding, Online Engagement">
+    <meta name="description" content="J2W’s Social Media & Digital Marketing services drive engagement and growth with bold, data-driven strategies.">
+    <meta name="keywords" content="Social Media, Digital Marketing, J2W, Branding, Engagement">
     <title>Social Media & Digital Marketing - J2W</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Caladea:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -56,16 +56,11 @@
 
     <!-- Service Hero Section -->
     <section class="service-hero">
-        <video class="hero-video" autoplay muted loop playsinline>
-            <source src="https://assets.mixkit.co/videos/preview/mixkit-social-media-marketing-concept-44667-large.mp4" type="video/mp4">
-        </video>
-        <div class="hero-overlay"></div>
         <div class="container">
-            <div class="service-hero-content" data-aos="zoom-in">
+            <div class="service-hero-content" data-aos="fade-up">
                 <h1>Social Media & <span>Digital Marketing</span></h1>
-                <p>Unleash your brand’s potential with our bold, data-driven strategies.</p>
+                <p>Drive engagement and growth with our bold, data-driven strategies.</p>
                 <a href="index.html#section-contact" class="btn hero-btn">Get Started</a>
-                <a href="index.html#section-services" class="back-btn">Back to Services</a>
             </div>
         </div>
     </section>
@@ -75,13 +70,12 @@
         <div class="container">
             <div class="service-description-content" data-aos="fade-right">
                 <div class="service-text">
-                    <h2>Amplify Your Reach</h2>
-                    <hr class="small">
-                    <p>J2W crafts innovative social media and digital marketing campaigns that captivate audiences and drive results. From Instagram stories to LinkedIn ads, our team uses analytics and creativity to boost engagement, grow followers, and convert leads into loyal customers.</p>
+                    <h2>Boost Your Brand</h2>
+                    <p>J2W creates powerful social media and digital marketing campaigns that connect with your audience. From Instagram to LinkedIn, our strategies increase engagement, grow followers, and drive conversions using cutting-edge analytics.</p>
                     <a href="index.html#section-contact" class="btn request-quote">Request a Quote</a>
                 </div>
                 <div class="service-image">
-                    <img src="https://images.unsplash.com/photo-1611162618479-0ebb5d9d4b1f" alt="Social Media Analytics Dashboard" loading="lazy" srcset="https://images.unsplash.com/photo-1611162618479-0ebb5d9d4b1f?auto=format&w=800 800w, https://images.unsplash.com/photo-1611162618479-0ebb5d9d4b1f?auto=format&w=1200 1200w">
+                    <img src="https://images.unsplash.com/photo-1611162618071-8b4141d9a2f2" alt="Social Media Campaign Mockup" loading="lazy" srcset="https://images.unsplash.com/photo-1611162618071-8b4141d9a2f2?auto=format&w=600 600w, https://images.unsplash.com/photo-1611162618071-8b4141d9a2f2?auto=format&w=1200 1200w">
                 </div>
             </div>
         </div>
@@ -90,31 +84,28 @@
     <!-- Portfolio Section -->
     <section class="service-portfolio">
         <div class="container">
-            <div class="section-header" data-aos="fade-up">
-                <h2>Our Game-Changing Campaigns</h2>
-                <hr class="small">
-            </div>
+            <h2 data-aos="fade-up">Our Success Stories</h2>
             <div class="portfolio-swiper swiper-container" data-aos="fade-up">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="portfolio-item">
-                            <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c" alt="Instagram Campaign" loading="lazy">
-                            <h3>Instagram Takeover</h3>
-                            <p>Doubled engagement with a vibrant retail campaign.</p>
+                            <img src="https://images.unsplash.com/photo-1516321310768-61f3f03a6667" alt="Instagram Ad Campaign" loading="lazy">
+                            <h3>Retail Instagram Ads</h3>
+                            <p>Boosted engagement by 200% with vibrant visuals.</p>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="portfolio-item">
-                            <img src="https://images.unsplash.com/photo-1551288049-b1f3a0c3f8e7" alt="LinkedIn Ads" loading="lazy">
-                            <h3>LinkedIn Lead Gen</h3>
-                            <p>Generated 300+ B2B leads with targeted ads.</p>
+                            <img src="https://images.unsplash.com/photo-1551288049-b1f3a0c3f8e7" alt="LinkedIn Campaign" loading="lazy">
+                            <h3>LinkedIn B2B Ads</h3>
+                            <p>Generated 250+ leads for a tech client.</p>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="portfolio-item">
-                            <img src="https://images.unsplash.com/photo-1523473827533-2a48d0c5d420" alt="E-commerce Ads" loading="lazy">
-                            <h3>E-commerce Surge</h3>
-                            <p>Tripled sales with a festive TikTok campaign.</p>
+                            <img src="https://images.unsplash.com/photo-1611162618479-0ebb5d9d4b1f" alt="Analytics Dashboard" loading="lazy">
+                            <h3>Data-Driven Campaign</h3>
+                            <p>Increased ROI by 150% with analytics.</p>
                         </div>
                     </div>
                 </div>
@@ -123,52 +114,22 @@
         </div>
     </section>
 
-    <!-- Specialized Services Section -->
-    <section class="specialized-services">
-        <div class="container">
-            <div class="section-header" data-aos="fade-up">
-                <h2>Our Expertise</h2>
-                <hr class="small">
-            </div>
-            <div class="specialized-services-content" data-aos="fade-up">
-                <div class="specialized-service" data-aos="fade-up" data-aos-delay="100">
-                    <i class="fas fa-palette"></i>
-                    <h3>Creative Content</h3>
-                    <p>Stunning visuals and copy that resonate with your audience.</p>
-                </div>
-                <div class="specialized-service" data-aos="fade-up" data-aos-delay="200">
-                    <i class="fas fa-bullhorn"></i>
-                    <h3>Ad Campaigns</h3>
-                    <p>Targeted ads that deliver maximum ROI across platforms.</p>
-                </div>
-                <div class="specialized-service" data-aos="fade-up" data-aos-delay="300">
-                    <i class="fas fa-chart-pie"></i>
-                    <h3>Analytics</h3>
-                    <p>Actionable insights to optimize your marketing strategy.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- FAQ Section -->
     <section class="faq">
         <div class="container">
-            <div class="section-header" data-aos="fade-up">
-                <h2>Your Questions Answered</h2>
-                <hr class="small">
-            </div>
+            <h2 data-aos="fade-up">Frequently Asked Questions</h2>
             <div class="faq-content" data-aos="fade-up">
                 <div class="faq-item">
-                    <h3>When will I see campaign results? <i class="fas fa-chevron-down"></i></h3>
-                    <p>Engagement often spikes in 2-4 weeks, with major growth in 3-6 months.</p>
+                    <h3>How soon will I see results? <i class="fas fa-chevron-down"></i></h3>
+                    <p>Engagement typically rises in 2-4 weeks, with major growth in 3-6 months.</p>
                 </div>
                 <div class="faq-item">
-                    <h3>Which platforms do you target? <i class="fas fa-chevron-down"></i></h3>
-                    <p>We focus on Instagram, LinkedIn, TikTok, and more, tailored to your audience.</p>
+                    <h3>Which platforms do you use? <i class="fas fa-chevron-down"></i></h3>
+                    <p>We target Instagram, LinkedIn, TikTok, and more, based on your audience.</p>
                 </div>
                 <div class="faq-item">
-                    <h3>Do you create content? <i class="fas fa-chevron-down"></i></h3>
-                    <p>Absolutely, from videos to graphics, we make your brand shine.</p>
+                    <h3>Do you handle content creation? <i class="fas fa-chevron-down"></i></h3>
+                    <p>Yes, we produce visuals, videos, and copy tailored to your brand.</p>
                 </div>
             </div>
         </div>
@@ -191,8 +152,8 @@
         </div>
     </footer>
 
-    <!-- Chat with Us Button -->
-    <a href="index.html#section-contact" class="chat-btn"><i class="fas fa-comment-dots"></i> Chat with Us</a>
+    <!-- Go to Top Button -->
+    <a id="gotoTop" class="gotoTop" href="#page-top"><i class="fas fa-angle-up"></i></a>
 
     <!-- Scripts -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
