--- a/clothes-banners-marketing.html
+++ b/clothes-banners-marketing.html
@@ -1,1 +1,163 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="J2W’s Clothes, Banners & Marketing Material services deliver custom apparel, signage, and print solutions to boost your brand.">
+    <meta name="keywords" content="Custom Apparel, Banners, Marketing Material, J2W, Print Design">
+    <title>Clothes, Banners & Marketing Material - J2W</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <!-- Navigation Bar -->
+    <nav class="navbar">
+        <div class="container">
+            <div class="logo">J2W</div>
+            <button class="nav-toggle" aria-label="Toggle menu" aria-expanded="false">
+                <i class="fas fa-bars"></i>
+            </button>
+            <ul class="nav-links">
+                <li class="dropdown">
+                    <a href="index.html#page-top" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">
+                        Home <i class="fas fa-chevron-down"></i>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="index.html#page-top">Top</a></li>
+                        <li><a href="index.html#section-about">About</a></li>
+                        <li><a href="index.html#section-contact">Contact</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="index.html#section-services" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">
+                        Services <i class="fas fa-chevron-down"></i>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="social-media-digital-marketing.html">Social Media & Digital Marketing</a></li>
+                        <li><a href="web-branding-development.html">Web & Branding Development</a></li>
+                        <li><a href="clothes-banners-marketing.html">Clothes, Banners & Marketing Material</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="index.html#section-clients" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">
+                        Clients <i class="fas fa-chevron-down"></i>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="index.html#section-clients">Our Clients</a></li>
+                        <li><a href="index.html#section-testimonials">Testimonials</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
+    <!-- Service Hero Section -->
+    <section class="service-hero">
+        <div class="container">
+            <div class="service-hero-content" data-aos="fade-up">
+                <h1>Clothes, Banners & <span>Marketing Material</span></h1>
+                <p>Make your brand unforgettable with custom apparel and signage.</p>
+                <a href="index.html#section-contact" class="btn hero-btn">Get Started</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Service Description Section -->
+    <section class="service-description">
+        <div class="container">
+            <div class="service-description-content" data-aos="fade-right">
+                <div class="service-text">
+                    <h2>Stand Out with Style</h2>
+                    <p>J2W designs eye-catching custom apparel, banners, and marketing materials that amplify your brand. From branded T-shirts to vibrant trade show banners and flyers, we deliver high-quality solutions that grab attention.</p>
+                    <a href="index.html#section-contact" class="btn request-quote">Request a Quote</a>
+                </div>
+                <div class="service-image">
+                    <img src="https://images.unsplash.com/photo-1511556820780-d912e42b4980" alt="Custom Apparel Design" loading="lazy" srcset="https://images.unsplash.com/photo-1511556820780-d912e42b4980?auto=format&w=600 600w, https://images.unsplash.com/photo-1511556820780-d912e42b4980?auto=format&w=1200 1200w">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Portfolio Section -->
+    <section class="service-portfolio">
+        <div class="container">
+            <h2 data-aos="fade-up">Our Success Stories</h2>
+            <div class="portfolio-swiper swiper-container" data-aos="fade-up">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="portfolio-item">
+                            <img src="https://images.unsplash.com/photo-1503342217505-b0a15ec3261c" alt="Branded Apparel" loading="lazy">
+                            <h3>Branded Apparel</h3>
+                            <p>Created custom T-shirts for a festival campaign.</p>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="portfolio-item">
+                            <img src="https://images.unsplash.com/photo-1551489186-cf8726f514f8" alt="Trade Show Banner" loading="lazy">
+                            <h3>Trade Show Banner</h3>
+                            <p>Designed a vibrant banner for a retail expo.</p>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="portfolio-item">
+                            <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c" alt="Marketing Flyers" loading="lazy">
+                            <h3>Marketing Flyers</h3>
+                            <p>Produced sleek flyers for a product launch.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-pagination"></div>
+            </div>
+        </div>
+    </section>
+
+    <!-- FAQ Section -->
+    <section class="faq">
+        <div class="container">
+            <h2 data-aos="fade-up">Frequently Asked Questions</h2>
+            <div class="faq-content" data-aos="fade-up">
+                <div class="faq-item">
+                    <h3>What types of apparel do you offer? <i class="fas fa-chevron-down"></i></h3>
+                    <p>We design T-shirts, hoodies, caps, and more, customized to your brand.</p>
+                </div>
+                <div class="faq-item">
+                    <h3>Can you create banners for events? <i class="fas fa-chevron-down"></i></h3>
+                    <p>Yes, we produce banners for trade shows, festivals, and promotions.</p>
+                </div>
+                <div class="faq-item">
+                    <h3>Do you handle small print runs? <i class="fas fa-chevron-down"></i></h3>
+                    <p>Absolutely, we cater to both small and large orders with high quality.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <div class="footer-row">
+                <div class="footer-side1">
+                    <span class="footer-name">J2W</span>
+                    <div>Copyright © 2025 All rights reserved</div>
+                </div>
+                <div class="footer-side2">
+                    <ul class="social-details">
+                        <li><a href="https://www.facebook.com/profile.php?id=61561740595029" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Go to Top Button -->
+    <a id="gotoTop" class="gotoTop" href="#page-top"><i class="fas fa-angle-up"></i></a>
+
+    <!-- Scripts -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="script.js"></script>
+</body>
+</html>
