--- a/web-branding-development.html
+++ b/web-branding-development.html
@@ -16,7 +16,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="container">
-            <div class="logo">J2W</div>
+            <a href="index.html" class="logo">J2W</a>
             <button class="nav-toggle" aria-label="Toggle menu" aria-expanded="false">
                 <i class="fas fa-bars"></i>
             </button>
@@ -55,7 +55,7 @@
     </nav>
 
     <!-- Service Hero Section -->
-    <section class="service-hero">
+    <section class="service-hero web-branding">
         <div class="container">
             <div class="service-hero-content" data-aos="fade-up">
                 <h1>Web & <span>Branding Development</span></h1>
