--- a/web-branding-development.html
+++ b/web-branding-development.html
@@ -75,7 +75,7 @@
                     <a href="index.html#section-contact" class="btn request-quote">Request a Quote</a>
                 </div>
                 <div class="service-image">
-                    <img src="assets/images/pexels-tranmautritam-326501.jpg" alt="Website Design Mockup" loading="lazy" srcset="https://images.unsplash.com/photo-1547658719-5f8d3e1d057d?auto=format&w=600 600w, https://images.unsplash.com/photo-1547658719-5f8d3e1d057d?auto=format&w=1200 1200w">
+                    <img src="assets/images/pexels-tranmautritam-326501.jpg" alt="Website Design Mockup" loading="lazy" srcset="assets/images/pexels-tranmautritam-326501.jpg">
                 </div>
             </div>
         </div>
