--- a/web-branding-development.html
+++ b/web-branding-development.html
@@ -89,7 +89,7 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="portfolio-item">
-                            <img src="assets/images/Screenshot_24-4-2025_102920_www.w-o-s.co.za.jpeg" alt="Corporate Website" loading="lazy">
+                            <img src="assets/images/Home.jpg" alt="Corporate Website" loading="lazy">
                             <h3>Corporate Website</h3>
                             <p>Designed a sleek, responsive site for a tech firm.</p>
                         </div>
