--- a/web-branding-development.html
+++ b/web-branding-development.html
@@ -96,7 +96,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="portfolio-item">
-                            <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c" alt="Brand Identity" loading="lazy">
+                            <img src="assets/images/WOS.jpg" alt="Brand Identity" loading="lazy">
                             <h3>Brand Identity</h3>
                             <p>Created a bold logo and style guide for a startup.</p>
                         </div>
