--- a/web-branding-development.html
+++ b/web-branding-development.html
@@ -91,21 +91,21 @@
                         <div class="portfolio-item">
                             <img src="assets/images/Home.jpg" alt="Corporate Website" loading="lazy">
                             <h3>Corporate Website</h3>
-                            <p>Designed a sleek, responsive site for a tech firm.</p>
+                            <p>Design a sleek, responsive site for your business.</p>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="portfolio-item">
                             <img src="assets/images/WOS.jpg" alt="Brand Identity" loading="lazy">
                             <h3>Brand Identity</h3>
-                            <p>Created a bold logo and style guide for a startup.</p>
+                            <p>Create a bold logo and style guide for your startup.</p>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="portfolio-item">
-                            <img src="https://images.unsplash.com/photo-1551288049-b1f3a0c3f8e7" alt="E-commerce Site" loading="lazy">
+                            <img src="assets/images/_E-Commerce.jpg" alt="E-commerce Site" loading="lazy">
                             <h3>E-commerce Site</h3>
-                            <p>Built a high-converting online store for retail.</p>
+                            <p>Build a high-converting online store for retail.</p>
                         </div>
                     </div>
                 </div>
