--- a/web-branding-development.html
+++ b/web-branding-development.html
@@ -103,7 +103,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="portfolio-item">
-                            <img src="assets/images/_E-Commerce.jpg" alt="E-commerce Site" loading="lazy">
+                            <img src="assets/images/White Modern E-Commerce instagram post.jpg" alt="E-commerce Site" loading="lazy">
                             <h3>E-commerce Site</h3>
                             <p>Build a high-converting online store for retail.</p>
                         </div>
