--- a/web-branding-development.html
+++ b/web-branding-development.html
@@ -89,7 +89,7 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="portfolio-item">
-                            <img src="assets/images/Home.jpg" alt="Corporate Website" loading="lazy">
+                            <img src="assets/images/Home (1).jpg" alt="Corporate Website" loading="lazy">
                             <h3>Corporate Website</h3>
                             <p>Design a sleek, responsive site for your business.</p>
                         </div>
