--- a/social-media-digital-marketing.html
+++ b/social-media-digital-marketing.html
@@ -75,7 +75,7 @@
                     <a href="index.html#section-contact" class="btn request-quote">Request a Quote</a>
                 </div>
                 <div class="service-image">
-                    <img src="assets/images/Social Media Marketing Presentation.jpg alt="Social Media Campaign Mockup" loading="lazy" srcset="assets/images/Social Media Marketing Presentation.jpg alt=">
+                    <img src="assets/images/Social Media Marketing Presentation.jpg" loading="lazy" srcset="assets/images/Social Media Marketing Presentation.jpg">
                 </div>
             </div>
         </div>
