--- a/social-media-digital-marketing.html
+++ b/social-media-digital-marketing.html
@@ -75,7 +75,7 @@
                     <a href="index.html#section-contact" class="btn request-quote">Request a Quote</a>
                 </div>
                 <div class="service-image">
-                    <img src="assets/images/Social Media Marketing Presentation.jpg" loading="lazy" srcset="assets/images/Social Media Marketing Presentation.jpg">
+                    <img src="https://images.unsplash.com/photo-1611162618071-8b4141d9a2f2" alt="Social Media Campaign Mockup" loading="lazy" srcset="https://images.unsplash.com/photo-1611162618071-8b4141d9a2f2?auto=format&w=600 600w, https://images.unsplash.com/photo-1611162618071-8b4141d9a2f2?auto=format&w=1200 1200w">
                 </div>
             </div>
         </div>
