--- a/social-media-digital-marketing.html
+++ b/social-media-digital-marketing.html
@@ -89,9 +89,9 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="portfolio-item">
-                            <img src="https://images.unsplash.com/photo-1516321310768-61f3f03a6667" alt="Instagram Ad Campaign" loading="lazy">
-                            <h3>Retail Instagram Ads</h3>
-                            <p>Boosted engagement by 200% with vibrant visuals.</p>
+                            <img src="assets/images/Sky Blue Modern Digital Marketing Ads Instagram Post.jpg" alt="Instagram Ad Campaign" loading="lazy">
+                            <h3>Instagram Ads</h3>
+                            <p>Boost engagement by 200% with vibrant visuals.</p>
                         </div>
                     </div>
                     <div class="swiper-slide">
