--- a/clothes-banners-marketing.html
+++ b/clothes-banners-marketing.html
@@ -84,7 +84,7 @@
     <!-- Portfolio Section -->
     <section class="service-portfolio">
         <div class="container">
-            <h2 data-aos="fade-up">What offer</h2>
+            <h2 data-aos="fade-up">What we offer</h2>
             <div class="portfolio-swiper swiper-container" data-aos="fade-up">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
