--- a/social-media-digital-marketing.html
+++ b/social-media-digital-marketing.html
@@ -103,7 +103,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="portfolio-item">
-                            <img src="https://images.unsplash.com/photo-1611162618479-0ebb5d9d4b1f" alt="Analytics Dashboard" loading="lazy">
+                            <img src="assets/images/pexels-kindelmedia-7688102.jpg" alt="Analytics Dashboard" loading="lazy">
                             <h3>Data-Driven Campaign</h3>
                             <p>Increased ROI by 150% with analytics.</p>
                         </div>
