--- a/clothes-banners-marketing.html
+++ b/clothes-banners-marketing.html
@@ -103,7 +103,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="portfolio-item">
-                            <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c" alt="Marketing Flyers" loading="lazy">
+                            <img src="assets/images/pexels-jakobjin-27857206.jpg" alt="Marketing Flyers" loading="lazy">
                             <h3>Marketing Flyers</h3>
                             <p>Produced sleek flyers for a product launch.</p>
                         </div>
