--- a/clothes-banners-marketing.html
+++ b/clothes-banners-marketing.html
@@ -91,21 +91,21 @@
                         <div class="portfolio-item">
                             <img src="https://images.unsplash.com/photo-1503342217505-b0a15ec3261c" alt="Branded Apparel" loading="lazy">
                             <h3>Branded Apparel</h3>
-                            <p>Created custom T-shirts for a festival campaign.</p>
+                            <p>Create custom T-shirts for campaigns.</p>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="portfolio-item">
-                            <img src="https://images.unsplash.com/photo-1551489186-cf8726f514f8" alt="Trade Show Banner" loading="lazy">
+                            <img src="assets/images/pexels-jakobjin-27857206.jpg" alt="Trade Show Banner" loading="lazy">
                             <h3>Trade Show Banner</h3>
-                            <p>Designed a vibrant banner for a retail expo.</p>
+                            <p>Design a vibrant banner for a retail expo.</p>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="portfolio-item">
                             <img src="assets/images/pexels-jakobjin-27857206.jpg" alt="Marketing Flyers" loading="lazy">
                             <h3>Marketing Flyers</h3>
-                            <p>Produced sleek flyers for a product launch.</p>
+                            <p>Produce sleek flyers for a product launch.</p>
                         </div>
                     </div>
                 </div>
