--- a/clothes-banners-marketing.html
+++ b/clothes-banners-marketing.html
@@ -103,7 +103,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="portfolio-item">
-                            <img src="assets/images/pexels-jakobjin-27857206.jpg" alt="Marketing Flyers" loading="lazy">
+                            <img src="assets/images/pexels-walidphotoz-4283126 (1).jpg" alt="Marketing Flyers" loading="lazy">
                             <h3>Marketing Flyers</h3>
                             <p>Produce sleek flyers for a product launch.</p>
                         </div>
